--- a/public/assets/style/style.css
+++ b/public/assets/style/style.css
@@ -208,6 +208,7 @@ h1 span:last-child {
 .card {
   max-width: 690px;
   width: 100%;
+  min-height: 500px;
   height: auto;
   display: flex;
   flex-direction: column;
@@ -488,12 +489,8 @@ h4 {
 }
 
 #event-info {
-  border: 3px solid #101014;
-  border-radius: 10px;
-  padding: 10px;
   background-color: #2A3045;
   color: #f5f5f0;
-  margin: 50px 10px;
   opacity: 0;
   transition: all 0.6s cubic-bezier(0.34, 1.56, 0.64, 1);
   width: 0;
@@ -502,6 +499,10 @@ h4 {
 }
 
 .show {
+  border: 3px solid #101014;
+  border-radius: 10px;
+  padding: 10px;
+  margin: 50px 10px;
   opacity: 1 !important;
   max-width: 500px !important;
   width: 100% !important;
